--- a/package.json
+++ b/package.json
@@ -9,10 +9,9 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "pageObjects-chrome":"npx playwright test usePageObjects.spec.ts --project=chromium",
-    "pageObjects-firefox":"npx playwright test usePageObjects.spec.ts --project=firefox",
+    "pageObjects-chrome": "npx playwright test usePageObjects.spec.ts --project=chromium",
+    "pageObjects-firefox": "npx playwright test usePageObjects.spec.ts --project=firefox",
     "pageObjects-all": "npm run pageObjects-chrome && npm run pageObjects-firefox"
-
   },
   "dependencies": {
     "@angular/animations": "^14.2.12",
@@ -62,6 +61,7 @@
     "@angular/compiler-cli": "^14.2.12",
     "@angular/language-service": "14.2.12",
     "@compodoc/compodoc": "^1.1.19",
+    "@faker-js/faker": "^9.8.0",
     "@fortawesome/fontawesome-free": "^5.2.0",
     "@playwright/test": "^1.49.1",
     "@types/leaflet": "1.2.3",
