--- a/.gitignore
+++ b/.gitignore
@@ -40,6 +40,7 @@ testem.log
 # System Files
 .DS_Store
 Thumbs.db
+.env
 
 # Playwright
 node_modules/
@@ -47,3 +48,4 @@ node_modules/
 /playwright-report/
 /blob-report/
 /playwright/.cache/
+
