--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "@playwright/test": "^1.49.1",
     "@types/leaflet": "1.2.3",
     "@types/node": "^12.12.70",
+    "allure-playwright": "^3.2.2",
     "codelyzer": "^0.0.28",
     "conventional-changelog-cli": "^2.2.2",
     "dotenv": "^16.5.0",
